--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -475,6 +475,26 @@ jobs:
         run: |
           TENSORZERO_CLICKHOUSE_VERSION=${{ matrix.clickhouse_version.tag }} docker compose -f tensorzero-core/tests/e2e/docker-compose.replicated.yml logs -t
 
+      - name: Print ClickHouse error logs (replicated)
+        if: always()
+        run: |
+          echo "Error logs for ClickHouse 01:"
+          docker exec e2e-clickhouse01-1 cat /var/log/clickhouse-server/clickhouse-server.err.log
+          echo "Error logs for ClickHouse 02:"
+          docker exec e2e-clickhouse02-1 cat /var/log/clickhouse-server/clickhouse-server.err.log
+          echo "Error logs for ClickHouse 03:"
+          docker exec e2e-clickhouse03-1 cat /var/log/clickhouse-server/clickhouse-server.err.log
+
+      - name: Print ClickHouse trace logs (replicated)
+        if: always()
+        run: |
+          echo "Trace logs for ClickHouse 01:"
+          docker exec e2e-clickhouse01-1 cat /var/log/clickhouse-server/clickhouse-server.log
+          echo "Trace logs for ClickHouse 02:"
+          docker exec e2e-clickhouse02-1 cat /var/log/clickhouse-server/clickhouse-server.log
+          echo "Trace logs for ClickHouse 03:"
+          docker exec e2e-clickhouse03-1 cat /var/log/clickhouse-server/clickhouse-server.log
+
       - name: Print docker compose logs (non-replicated)
         if: always() && matrix.replicated == false
         run: |
