--- a/examples/guides/providers/nvidia_nim/docker-compose.yml
+++ b/examples/guides/providers/nvidia_nim/docker-compose.yml
@@ -3,7 +3,9 @@
 
 services:
   gateway:
-    image: tensorzero/gateway
+    build:
+      context: ../../../../
+      dockerfile: gateway/Dockerfile
     volumes:
       - ./config:/app/config:ro
     command: --config-file /app/config/tensorzero.toml
