--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -47,6 +47,13 @@ type = "fireworks"
 model_name = "accounts/fireworks/models/gpt-oss-20b"
 parse_think_blocks = false
 
+[models."gpt-oss-20b-vllm"]
+routing = ["vllm"]
+
+[models."gpt-oss-20b-vllm".providers.vllm]
+type = "vllm"
+api_base = "https://tensorzero--vllm-gpt-oss-20b-serve.modal.run/v1/"
+model_name = "openai/gpt-oss-20b"
 
 [models."gpt-4o-mini-2024-07-18-dynamic"]
 routing = ["openai"]
@@ -1398,6 +1405,12 @@ model = "qwen2.5-0.5b-instruct-vllm"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 100
 
+[functions.basic_test.variants.vllm-gpt-oss-20b]
+type = "chat_completion"
+model = "gpt-oss-20b-vllm"
+system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
+max_tokens = 100
+
 [functions.basic_test.variants.vllm-extra-body]
 type = "chat_completion"
 model = "qwen2.5-0.5b-instruct-vllm"
@@ -1537,6 +1550,12 @@ max_tokens = 100
 [functions.basic_test.variants.fireworks-deepseek]
 type = "chat_completion"
 model = "deepseek-r1"
+system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
+max_tokens = 800
+
+[functions.basic_test.variants.fireworks-gpt-oss-20b]
+type = "chat_completion"
+model = "gpt-oss-20b-fireworks"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 800
 
@@ -2048,6 +2067,14 @@ json_mode = "strict"
 [functions.json_success.variants.vllm]
 type = "chat_completion"
 model = "qwen2.5-0.5b-instruct-vllm"
+system_template = "../../fixtures/config/functions/json_success/prompt/system_template.minijinja"
+user_template = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
+json_mode = "on"
+max_tokens = 100
+
+[functions.json_success.variants.vllm-gpt-oss-20b]
+type = "chat_completion"
+model = "gpt-oss-20b-vllm"
 system_template = "../../fixtures/config/functions/json_success/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
 json_mode = "on"
