Revert "Remove option and context path for integration"
This reverts commit d0ec65b36aba7da22a331052022ce210b75cbe78.

trying to resolve massive diff

--- a/examples/guides/providers/nvidia_nim/docker-compose.yml
+++ b/examples/guides/providers/nvidia_nim/docker-compose.yml
@@ -3,9 +3,7 @@
 
 services:
   gateway:
-    build:
-      context: ../../../../
-      dockerfile: gateway/Dockerfile
+    image: tensorzero/gateway
     volumes:
       - ./config:/app/config:ro
     command: --config-file /app/config/tensorzero.toml
