Resolving "Check-docker-compose error
Need to set base api to the port 8000

Or as ai puts it:
TensorZero Gateway uses to connect to the NVIDIA NIM service, which typically exposes its API (and often a web UI) on port 8000

gateway-1  | 2025-08-07T02:23:17.187677Z  INFO gateway: Starting TensorZero Gateway 2025.8.0 (commit: e55b8fe)
gateway-1  | 2025-08-07T02:23:17.188496Z ERROR tensorzero_core::error: models.llama_3_1_8b_instruct.providers.nvidia_nim: missing field `api_base`
gateway-1  | 2025-08-07T02:23:17.188520Z ERROR gateway: Failed to load config

--- a/examples/guides/providers/nvidia_nim/config/tensorzero.toml
+++ b/examples/guides/providers/nvidia_nim/config/tensorzero.toml
@@ -4,6 +4,7 @@ routing = ["nvidia_nim"]
 [models.llama_3_1_8b_instruct.providers.nvidia_nim]
 type = "nvidia_nim"
 model_name = "meta/llama-3.1-8b-instruct"  # Note the "meta/" prefix
+api_base = "http://nvidia-nim:8000"
 api_key_location = "env::NVIDIA_API_KEY"   # Optional but explicit
 
 [functions.my_function_name]
