--- a/examples/rag-retrieval-augmented-generation/simple-agentic-rag/config/tensorzero.toml
+++ b/examples/rag-retrieval-augmented-generation/simple-agentic-rag/config/tensorzero.toml
@@ -6,6 +6,7 @@
 
 [gateway]
 observability.enabled = true
+template_filesystem_access.enabled = true
 
 # ┌────────────────────────────────────────────────────────────────────────────┐
 # │                                 FUNCTIONS                                  │
