--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -5,6 +5,7 @@ license = "Apache-2.0"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "clickhouse-connect>=0.8.18",
     "dotenv>=0.9.9",
     "httpx>=0.27.0",
     "openai-agents>=0.2.3",
