--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -1750,6 +1750,16 @@ user_template = "../../fixtures/config/functions/json_success/prompt/user_templa
 json_mode = "on"
 max_tokens = 100
 
+[functions.json_success.variants.fireworks-gpt-oss-20b]
+type = "chat_completion"
+model = "gpt-oss-20b-fireworks"
+system_template = "../../fixtures/config/functions/json_success/prompt/system_template.minijinja"
+user_template = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
+# Fireworks gives us 'Failed to format non-streaming choice: Expected message start token but ran out of tokens' if
+# we try to explicitly request a 'json_object' response format for gpt-oss-20b.
+json_mode = "off"
+max_tokens = 100
+
 [functions.json_success.variants.fireworks-implicit]
 type = "chat_completion"
 model = "fireworks::accounts/fireworks/models/mixtral-8x22b-instruct"
