Revert "Update docker-hub-publish.yml"
This reverts commit c738639a24428c8e5f27609a03da90437c5e96b4.

--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -6,8 +6,8 @@ on:
   workflow_dispatch:
   release:
     types: [released]
-#  push:
-#    branches: ["main"]
+  push:
+    branches: ["main"]
 
 env:
   DOCKERHUB_USER: tensorzero
