feat(helm): optionally provide image pull secret

--- a/examples/production-deployment-k8s-helm/templates/gateway.yaml
+++ b/examples/production-deployment-k8s-helm/templates/gateway.yaml
@@ -54,6 +54,10 @@ spec:
             {{- end }}
           resources:
             {{- toYaml .Values.gateway.resources | nindent 12 }}
+      {{- if .Values.gateway.image.pullSecret }}
+      imagePullSecrets:
+        - name: {{ .Values.gateway.image.pullSecret }}
+      {{- end }}
       volumes:
         - name: config-volume
           configMap:
