--- a/examples/production-deployment-k8s-helm/templates/ui.yaml
+++ b/examples/production-deployment-k8s-helm/templates/ui.yaml
@@ -45,6 +45,10 @@ spec:
               mountPath: /app/config
           resources:
             {{- toYaml .Values.ui.resources | nindent 12 }}
+      {{- if .Values.gateway.image.pullSecret }}
+      imagePullSecrets:
+        - name: {{ .Values.gateway.image.pullSecret }}
+      {{- end }}
       volumes:
         - name: config-volume
           configMap:
