feat(helm): optionally enable config map

--- a/examples/production-deployment-k8s-helm/templates/configmap.yaml
+++ b/examples/production-deployment-k8s-helm/templates/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.configMap.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,3 +9,4 @@ data:
   {{- range $key, $value := .Values.configMap.data }}
   {{ $key }}: {{ $value | quote }}
   {{- end }} 
+{{- end }}
