--- a/examples/production-deployment-k8s-helm/templates/gateway.yaml
+++ b/examples/production-deployment-k8s-helm/templates/gateway.yaml
@@ -13,8 +13,10 @@ spec:
       app.kubernetes.io/component: gateway
   template:
     metadata:
+      {{- if .Values.configMap.enabled }}
       annotations:
-        checksum/config: {{ toYaml .Values.configMap | sha256sum }}
+        checksum/config: {{ toYaml .Values.configMap.data | sha256sum }}
+      {{- end }}
       labels:
         {{- include "tensorzero.selectorLabels" . | nindent 8 }}
         app.kubernetes.io/component: gateway
@@ -46,8 +48,10 @@ spec:
             {{- end }}
             {{- end }}
           volumeMounts:
+            {{- if .Values.configMap.enabled }}
             - name: config-volume
               mountPath: /app/config
+            {{- end }}
             {{- if .Values.persistence.enabled }}
             - name: storage-volume
               mountPath: {{ .Values.persistence.mountPath }}
@@ -58,15 +62,19 @@ spec:
       imagePullSecrets:
         - name: {{ .Values.gateway.image.pullSecret }}
       {{- end }}
+      {{- if or .Values.configMap.enabled .Values.persistence.enabled }}
       volumes:
+        {{- if .Values.configMap.enabled }}
         - name: config-volume
           configMap:
             name: {{ include "tensorzero.fullname" . }}
+        {{- end }}
         {{- if .Values.persistence.enabled }}
         - name: storage-volume
           persistentVolumeClaim:
             claimName: {{ include "tensorzero.fullname" . }}-storage
         {{- end }}
+      {{- end }}
       {{- with .Values.gateway.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
