--- a/examples/production-deployment-k8s-helm/templates/ui.yaml
+++ b/examples/production-deployment-k8s-helm/templates/ui.yaml
@@ -14,8 +14,10 @@ spec:
       app.kubernetes.io/component: ui
   template:
     metadata:
+      {{- if .Values.configMap.enabled }}
       annotations:
-        checksum/config: {{ toYaml .Values.configMap | sha256sum }}
+        checksum/config: {{ toYaml .Values.configMap.data | sha256sum }}
+      {{- end }}
       labels:
         {{- include "tensorzero.selectorLabels" . | nindent 8 }}
         app.kubernetes.io/component: ui
@@ -41,18 +43,22 @@ spec:
             {{- end }}
             {{- end }}
           volumeMounts:
+            {{- if .Values.configMap.enabled }}
             - name: config-volume
               mountPath: /app/config
+            {{- end }}
           resources:
             {{- toYaml .Values.ui.resources | nindent 12 }}
       {{- if .Values.gateway.image.pullSecret }}
       imagePullSecrets:
         - name: {{ .Values.gateway.image.pullSecret }}
       {{- end }}
+      {{- if .Values.configMap.enabled }}
       volumes:
         - name: config-volume
           configMap:
             name: {{ include "tensorzero.fullname" . }}
+      {{- end }}
       {{- with .Values.ui.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
