feat(helm): optionally use all environment variables from secret

--- a/examples/production-deployment-k8s-helm/templates/gateway.yaml
+++ b/examples/production-deployment-k8s-helm/templates/gateway.yaml
@@ -47,6 +47,11 @@ spec:
                   key: {{ .key }}
             {{- end }}
             {{- end }}
+          envFrom:
+            {{- if and .Values.gateway.additionalEnv.secretName (not .Values.gateway.additionalEnv.keys) }}
+            - secretRef:
+                name: {{ .Values.gateway.additionalEnv.secretName }}
+            {{- end }}
           volumeMounts:
             {{- if .Values.configMap.enabled }}
             - name: config-volume
