--- a/examples/production-deployment-k8s-helm/templates/ui.yaml
+++ b/examples/production-deployment-k8s-helm/templates/ui.yaml
@@ -42,6 +42,11 @@ spec:
             {{- end }}
             {{- end }}
             {{- end }}
+          envFrom:
+            {{- if and .Values.gateway.additionalEnv.secretName (not .Values.gateway.additionalEnv.keys) }}
+            - secretRef:
+                name: {{ .Values.gateway.additionalEnv.secretName }}
+            {{- end }}
           volumeMounts:
             {{- if .Values.configMap.enabled }}
             - name: config-volume
