--- a/ui/fixtures/config/tensorzero.e2e.toml
+++ b/ui/fixtures/config/tensorzero.e2e.toml
@@ -51,6 +51,7 @@ json_mode = "strict"
 [functions.extract_entities]
 type = "json"
 output_schema = "functions/extract_entities/output_schema.json"
+description = "Extract named entities from text"
 
 [functions.extract_entities.variants.gpt4o_mini_initial_prompt]
 type = "chat_completion"
@@ -90,6 +91,7 @@ system_template = "functions/extract_entities/baseline/system_template.minijinja
 [functions.write_haiku]
 type = "chat"
 user_schema = "functions/write_haiku/user_schema.json"
+description = "Generate a haiku about a given topic"
 
 [functions.write_haiku.variants.initial_prompt_gpt4o_mini]
 type = "chat_completion"
