--- a/ui/fixtures/config/tensorzero.toml
+++ b/ui/fixtures/config/tensorzero.toml
@@ -59,6 +59,7 @@ model = "dummy::good"
 [functions.extract_entities]
 type = "json"
 output_schema = "functions/extract_entities/output_schema.json"
+description = "Extract named entities from text"
 
 [functions.extract_entities.variants.gpt4o_mini_initial_prompt]
 type = "chat_completion"
@@ -102,6 +103,7 @@ json_mode = "strict"
 [functions.write_haiku]
 type = "chat"
 user_schema = "functions/write_haiku/user_schema.json"
+description = "Generate a haiku about a given topic"
 
 [functions.write_haiku.variants.initial_prompt_gpt4o_mini]
 type = "chat_completion"
