--- a/examples/production-deployment-k8s-helm/templates/gateway.yaml
+++ b/examples/production-deployment-k8s-helm/templates/gateway.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.gateway.image.repository }}:{{ .Values.gateway.image.tag }}"
+          image: "{{ .Values.gateway.image.repository }}:{{ .Values.gateway.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.gateway.image.pullPolicy }}
           {{- if .Values.gateway.command }}
           command:
